# exp_krx_quant_assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.omc/: project-memory.json
.omc/plans/: autopilot-impl.md
.omc/specs/: deep-dive-krx-quant-trading-assistant-dev.md  deep-dive-trace-krx-quant-trading-assistant-dev.md
docs/: NO_CODE_STRATEGY_WORKSPACE.md
docs/reference/: APPLICABLE_STRATEGIES_CLI_GUIDE.md  FAMOUS_QUANT_STRATEGIES.md
old-base-v1/context/: korean-stock-quant-assistant-20260627T172044Z.md
old-base-v1/interviews/: korean-stock-quant-assistant-20260627T172044Z.md
old-base-v1/plans/: prd-korean-stock-quant-assistant-v1.md  ralplan-consensus-korean-stock-quant-assistant-v1.md  test-spec-korean-stock-quant-assistant-v1.md
old-base-v1/specs/: deep-interview-korean-stock-quant-assistant.md
ops/: setup.sh
ops/launchd/: README.md  com.quant-krx.daily.plist.template
refined_epics/: DESIGN-R01-FACTOR_PLATFORM.md  PRD-R01-FACTOR_PLATFORM.md  PRD-R02-DECLARATIVE_DEFINITION_CORE.md  PRD-R03-WORKSPACE_AND_EXECUTION.md  README.md  TRD-R02-DECLARATIVE_DEFINITION_CORE.md
roadmap/EPIC_R01/: DESIGN-R01-FACTOR_PLATFORM.md  DESIGN-R02-DECLARATIVE_DEFINITION_CORE.md  DESIGN-R03-WORKSPACE_AND_EXECUTION.md  TRD-R01-FACTOR_PLATFORM.md  TRD-R03-WORKSPACE_AND_EXECUTION.md
roadmap/EPIC_R02/: DESIGN-R01-QUANT_ASSISTANT_GUI.md  (+4 more)
samples/: per_premium_gap.json  quality_price_composite.json  qv_entry.json  qv_exit.json  qv_samsung_strategy.json  value_quality_score.json
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+197 files in other folders)
