[project]
name = "quant-krx"
version = "0.1.0"
description = "KRX Korean Stock Quant Trading Assistant"
readme = "README.md"
authors = [
    { name = "uhufor", email = "haejung83@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "vectorbt>=0.26.0",
    "finance-datareader>=0.9.50",
    "pykrx>=1.2.8",
    "duckdb>=1.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.13.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=18.0.0",
    "pyyaml>=6.0.0",
    "setuptools>=70,<82",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
quant-krx = "quant_krx.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_krx"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]
